crates/testscribe/tests/ui/standalone_no_parent.stderr
error: Standalone test must be a root test (no parent)
 --> tests/ui/standalone_no_parent.rs:8:14
  |
8 | #[testscribe(standalone)]
  |              ^^^^^^^^^^
